# idss

./: .gitignore  LICENSE  README.md  fds.py  start.sh
backend/: DEV.md  app.py  config.py  init_db.py
backend/crawler/: __init__.py
backend/crawler/eastmoney/: __init__.py
backend/crawler/eastmoney/stock/: data.py  (+4 more)
backend/main/: __init__.py  choice.py  db.py  stock_index_component.py  stock_k.py  stock_klines.py  stocks.py  xuangu.py
backend/main/models/: fund.py  stock.py
backend/tables/: hs300_stocks.sql  stock_index_component_hs300.sql  stock_index_component_sh50.sql  stock_k_day.sql  stocks.sql
fds/: .gitignore  README.md  __init__.py  common.py  setup.cfg
fds/fds/mixin/: web.py
fds/fds/stock/index/: source.py
fds/fds/stock/stock/: eastmoney.py  source.py
fds/mixin/: html.py
fds/stock/: __init__.py  stock.py
fds/stock/data_source/: __init__.py  eastmoney.py
fds/stock/data_source/eastmoney/: __init__.py  data.py  eastmoney.py  index_component.py
fds/stock/index/: __init__.py  csindex.py
fds/stock/stock/: __init__.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: base.js  stocks.js
frontend/src/router/: index.js
idss/: docker-compose.yml
idss/backend/: config.py  init_db.py  requirement.txt
idss/backend/app/: config.py  main.py
idss/backend/main/: stock_choice.py  stock_klines.py  stock_overview.py
idss/backend/strategy/: __init__.py
idss/frontend/: .env  package-lock.json  vue.config.js
idss/frontend/src/: App.vue
jupyter/: csindex.ipynb  data.ipynb  eastmoney.ipynb  fds.ipynb
(+13 files in other folders)
