[metadata]
name = fds
version = 0.0.1
author = xingweidong
author_email = xingweidong@email.com
description = Financial Data Source
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = fds
python_requires = >=3.6
